change in p tag

--- a/detailedbio.html
+++ b/detailedbio.html
@@ -41,7 +41,7 @@
 
   <section>
     <h2>Education</h2>
-    <p>Graduate Certificate in Project Management | Algoma University</p>
+    <p>Graduate Certificate in Project Management | Algoma University Brampton</p>
     <p>BE in Computer Engineering | Lj Institute of Engineering and Technology | 2020</p>
     <p> Diploma in Computer Engineering | Lj Polytechnic | 2017 </p>
   </section>
